kubernetes/v1.12+/memcached.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip-memcached
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zulip
      component: memcached
  template:
    metadata:
      labels:
        app: zulip
        component: memcached
    spec:
      containers:
      - name: memcached
        image: quay.io/sameersbn/memcached:latest
        resources:
          limits:
            cpu: 75m
            memory: 768Mi
        ports:
        - name: memcached
          containerPort: 11211
          protocol: TCP
