kubernetes/v1.12+/redis.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip-redis
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zulip
      component: redis
  template:
    metadata:
      labels:
        app: zulip
        component: redis
    spec:
      containers:
      - name: redis
        image: quay.io/sameersbn/redis:latest
        resources:
          limits:
            cpu: 1
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /var/lib/redis
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zulip-redis-data
