kubernetes/v1.12+/zulip.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cowork-chat
      component: zulip
  template:
    metadata:
      labels:
        app: cowork-chat
        component: zulip
    spec:
      containers:
      - name: zulip
        image: zulip/docker-zulip:2.1.1-0
        resources:
          limits:
            cpu: 2
            memory: 4Gi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #     scheme: HTTP
        #   initialDelaySeconds: 120
        #   timeoutSeconds: 12
        #   timeoutSeconds: 12
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zulip-data
