kubernetes/v1.12+/memcached.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zulip-memcached
  namespace: zulip
  labels:
    app: zulip
spec:
  selector:
    app: zulip
    component: memcached
  ports:
  - name: memcached
    port: 11211
    targetPort: 11211
    protocol: TCP
