kubernetes/v1.12+/zulip.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zulip
  namespace: zulip
  labels:
    app: zulip
spec:
  selector:
    app: zulip
    component: zulip
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
